@startuml クラス図

class BaseModule {

}
note right: HogeHogeSerialとの関係が少し怪しめ。\nモジュールのふるまいを決定するクラス。


class SerialCommunication {

}

class HogeHogeSerial {
    
}
note right: 実際に通信で流すデータを決定するクラス

class MotorControlModule {

}

class EncoderModule {

}

class SolenoidModule {

}

class SensorModule {

}

class HogeHogeSystem {

}
note right: ユーザーが利用するクラス。すべて、ここから参照する

SerialCommunication <|-- HogeHogeSerial
HogeHogeSerial <.. BaseModule
BaseModule <|-- MotorControlModule
BaseModule <|-- EncoderModule
BaseModule <|-- SolenoidModule
BaseModule <|-- SensorModule
MotorControlModule "0..*" --* HogeHogeSystem
EncoderModule "0..*" --* HogeHogeSystem
SolenoidModule "0..*" --* HogeHogeSystem
SensorModule "0..*" --* HogeHogeSystem
@enduml